--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,10 @@
     android:id="@+id/etv_one"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"/>
+    android:layout_marginTop="16dp"
+    android:minLines="2"
+    android:lineSpacingMultiplier="1.5"
+    android:lines="2"
+    tools:text="@tools:sample/lorem"/>
 
 </LinearLayout>
